--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.4.9",
+    "vue-select": "^3.10.8",
     "vue-template-compiler": "^2.6.12"
   },
   "devDependencies": {
