--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.0",
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.0",
+    "bootstrap-vue": "^2.20.1",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.4.9",
