--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue-loader": "^15.9.5",
     "vue-router": "^3.4.9",
     "vue-select": "^3.10.8",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.11.0"
