--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@rails/webpacker": "5.2.1",
     "axios": "^0.21.0",
     "bootstrap-vue": "^2.20.1",
+    "chart.js": "^2.9.4",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
     "vue-burger-menu": "^2.0.5",
+    "vue-chartjs": "^3.5.1",
     "vue-loader": "^15.9.5",
     "vue-router": "^3.4.9",
     "vue-template-compiler": "^2.6.12",
