--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "bootstrap-vue": "^2.20.1",
     "chart.js": "^2.9.4",
+    "v-calendar": "^2.2.2",
     "vue": "^2.6.12",
     "vue-axios": "^3.2.0",
     "vue-burger-menu": "^2.0.5",
